[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pyanchor"
author = "Ricky White"
author-email = "ricky@whitelionmedia.com"
home-page = "https://github.com/EndlessTrax/pyanchor/"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
description-file="README.md"
requires = [
    "beautifulsoup4==4.11.1",
    "requests==2.31.0",
    "typer==0.5.0",
    "lxml==4.9.2",
    "colorama==0.4.5"
]
requires-python=">=3.8"

[tool.flit.metadata.urls]
Documentation = "https://github.com/EndlessTrax/pyanchor/blob/master/README.md"
Issues = "https://github.com/EndlessTrax/pyanchor/issues"

[tool.flit.scripts]
pyanchor = "pyanchor.cli:app"
