[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyanchor"
version = "0.8.1"
authors = [
    {name="Ricky White", email="ricky@rickywhite.net"},
]
description = "Find your broken links, so users don't."
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "colorama>=0.4.6",
    "lxml>=5.3.0",
    "requests>=2.32.3",
    "typer>=0.12.5",
]

[project.scripts]
pyanchor = "pyanchor.cli:app"

[project.urls]
Homepage = "https://github.com/EndlessTrax/pyanchor/"
Documentation = "https://github.com/EndlessTrax/pyanchor/blob/master/README.md"
Repository = "https://github.com/EndlessTrax/pyanchor.git"
Issues = "https://github.com/EndlessTrax/pyanchor/issues"

[tool.uv]
dev-dependencies = [
    "flask>=3.0.3",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.6.8",
]
