[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyanchor"
version = "0.9.0"
authors = [
    {name="Ricky White", email="ricky@rickywhite.net"},
]
description = "Find your broken links, so users don't."
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "colorama>=0.4.6",
    "lxml>=6.1.1",
    "requests>=2.34.2",
    "typer>=0.26.8",
]

[project.scripts]
pyanchor = "pyanchor.cli:app"

[project.urls]
Homepage = "https://github.com/EndlessTrax/pyanchor/"
Documentation = "https://github.com/EndlessTrax/pyanchor/blob/master/README.md"
Repository = "https://github.com/EndlessTrax/pyanchor.git"
Issues = "https://github.com/EndlessTrax/pyanchor/issues"

[dependency-groups]
dev = [
    "flask>=3.1.3",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.20",
]
